--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "migrate": "dotenv -e .env -- tsx src/db/migrate.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/pg": "^8.11.6",
     "@types/express": "^4.17.21",
     "@types/node": "^22.9.0",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^9.15.0",
     "tsx": "^4.19.2",
     "typescript": "~5.6.2"
