--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -24,6 +25,7 @@
     "supertest": "^7.2.2",
     "tsx": "^4.19.2",
     "typescript": "~5.6.2",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "@types/nodemailer": "^6.4.16"
   }
 }
