--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@stellar/stellar-sdk": "^14.5.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "zod": "^4.3.6"
