--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "zod": "^4.3.6",
-    "nodemailer": "^6.9.16"
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.16",
     "zod": "^4.3.6"
   },
   "devDependencies": {
