--- a/package.json
+++ b/package.json
@@ -7,26 +7,18 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "lint": "eslint src",
-    "test": "vitest run"
+    "lint": "eslint src"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.1",
-    "zod": "^4.3.6"
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^30.0.0",
     "@types/node": "^22.9.0",
-    "@types/supertest": "^6.0.3",
     "eslint": "^9.15.0",
-    "jest": "^30.2.0",
-    "ts-jest": "^29.4.6",
-    "supertest": "^7.2.2",
     "tsx": "^4.19.2",
-    "typescript": "~5.6.2",
-    "vitest": "^4.0.18"
+    "typescript": "~5.6.2"
   }
 }
