--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "zod": "^4.3.6",
-    "nodemailer": "^6.9.16"
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7"
-    "zod": "^4.3.6"
+    "nodemailer": "^6.9.16",
+    "zod": "^4.3.6",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
